# bim_project

./: .gitignore  Dockerfile  README.md  bim-app.service  bim-redis.service  celery.service  cloudflared.service  docker-bim-app.service  docker-compose.yml  pyproject.toml
.gradio/flagged/: dataset1.csv
src/: app.py  chroma_service.py  config.py  faiss_service.py  file_service.py  folder_service.py  gpt_oss.py  local_test.py  main.py  model_service.py  pdf_service.py  prompt_service.py  task.py  test.ipynb
src/src/chroma_db/: chroma.sqlite3
tests/: test_app.py
