[project]
name = "ai"
version = "0.1.0"
description = ""
authors = [
    {name = "Simon",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.14,<3.15"
dependencies = [
    "pypdf (>=5.1.0,<6.0.0)",
    "pymupdf (>=1.26.6,<2.0.0)",
    "pdfplumber (>=0.11.8,<0.12.0)",
    "ocrmypdf (>=16.12.0,<17.0.0)",
    "faiss-cpu (>=1.13.1,<2.0.0)",
    "tiktoken (>=0.12.0,<0.13.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.0.0,<2.0.0)",
    "langchain-core (>=1.1.3,<2.0.0)",
    "langchain-huggingface (>=1.1.0,<2.0.0)",
    "sentence-transformers (>=5.1.2,<6.0.0)",
    "transformers (>=4.57.3,<5.0.0)",
    "datasets (>=4.4.1,<5.0.0)",
    "pytesseract (>=0.3.13,<0.4.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "protobuf (>=6.33.2,<7.0.0)",
    "sentencepiece (>=0.2.1,<0.3.0)",
    "hf-xet (>=1.2.0,<2.0.0)",
    "timm (>=1.0.22,<2.0.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "fastapi (>=0.124.2,<0.125.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "gradio (>=6.1.0,<7.0.0)",
    "layoutparser[detectron2] (>=0.3.4,<0.4.0)",
    "camelot-py[cv] (>=1.0.9,<2.0.0)",
    "tabula (>=1.0.5,<2.0.0)",
    "tabula-py (>=2.10.0,<3.0.0)",
    "jpype1 (==1.6.0)",
]

[tool.poetry]
packages = [{include = "ai", from = "src"}]

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"


[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
