[project]
name = "bim_project"
version = "0.1.0"
description = ""
authors = [
    {name = "Simon",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "torch (>=2.9.1,<3.0.0)",
    "torchvision (>=0.24.1,<0.25.0)",
    "langchain-community (>=0.4.1,<0.5.0)",
    "langchain-text-splitters (>=1.1.0,<2.0.0)",
    "langchain-unstructured (>=1.0.1,<2.0.0)",
    "unstructured[pdf] (>=0.18.27,<0.19.0)",
    "langchain-huggingface (>=1.2.0,<2.0.0)",
    "langchain-core (>=1.2.7,<2.0.0)",
    "langchain-chroma (>=1.1.0,<2.0.0)",
    "transformers (==4.57.5)",
    "sentence-transformers (>=5.2.0,<6.0.0)",
    "fastapi (>=0.128.0,<0.129.0)",
    "gradio (>=6.3.0,<7.0.0)",
    "chromadb (>=1.4.1,<2.0.0)",
    "accelerate (>=1.12.0,<2.0.0)",
    "kernels (>=0.11.7,<0.12.0)",
    "triton (>=3.4) ; sys_platform == 'linux'"
]

[tool.poetry]
packages = [{include = "src"}]
classifiers = [
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux"
]

[[tool.poetry.source]]
name = "pytorch-gpu"
url = "https://download.pytorch.org/whl/cu130"
priority = "explicit"

[tool.poetry.dependencies]
torch = {source = "pytorch-gpu"}
torchvision = {source = "pytorch-gpu"}
[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
bim-app-dev = "src.main:dev_main"
bim-app-prod = "src.main:prod_main"